added new redirect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 
+<script language=javascript>
+    if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+        location.replace("https://fhsprogrammingclub.github.io/redirect/")
+    }
+</script>
 
 <script>
     if (window.innerHeight >= window.innerWidth) {
